# AOC

./: .gitignore  .gitmodules  CMakeLists-Copy.txt  CMakeLists.txt  README.md  run.sh
2020/: main.cpp
2020/day8/: part1.c
2021/Day16/: Day16-Part1.py  Day16-Part2.py
2022/: test.c
2022/Day1/: part2.c
2022/Day10/: part2.c
2022/Day11/: part1.c  part2.c
2022/Day12/: part2.c
2022/Day2/: part1.c  part2.c
2022/Day3/: part1.c  part1_HM.c  part2.c
2022/Day4/: part1.c
2022/Day5/: part1.c  part2.c
2022/Day6/: part1.c
2022/Day7/: part2.c
2022/Day8/: part1.c
2022/Day_10/: part1.c
2022/Day_11/: part1.c  part2.c
2022/Day_13/: part1.c  part2.c
2022/Day_14/: part1.c
2022/Day_15/: part1.c  vgcore.38791
2022/Day_16/: part1.c  part2.c
2022/Day_17/: part1.c  part2.c
2022/Day_18/: part2.c
2022/Day_19/: part1.c  part2.c
2022/Day_20/: part1.c
2022/Day_21/: part1.c
2022/Day_23/: part1.c
2022/Day_24/: part1.c
2022/day01/: part1.c
2022/day03/: part1.c
2022/day04/: part2.c
2022/day06/: part2.c
2022/day07/: part1.c
2022/day08/: part2.c
2022/day09/: part1.c  part2.c
2022/day12/: part1.c  part2.c
2022/day14/: part2.c
2022/day15/: part1.c  part2.c
2022/day17/: part2.c
2022/day18/: part1.c  part2.c
2022/day20/: part2.c
2022/day21/: part2.c
2022/day22/: part1.c  part2.c
2022/day23/: part2.c
2022/day24/: part2.c
2022/day25/: part1.c
2023/day01/: part1.c  part2.c
2023/day02/: part1.c  part2.c
2023/day03/: part1.c  part2.c
2023/day04/: part1.c  part2.c
2023/day05/: part1.c  (+2 more)
includes/: deque.c  fmt.c  fmt.h  hashmap.c  hashmap_int.c  list.c  priorityqueue.c  priorityqueue_max.c  priorityqueue_min.c  ranges.c  set.c  string.c  timer.c  vector.c
(+149 files in other folders)
